--- a/ComputerGraphics0.csproj
+++ b/ComputerGraphics0.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Filters\Kernel" />
+    </ItemGroup>
+
 </Project>
